manager approve plan :sparkles:

--- a/src/test/resources/global.properties
+++ b/src/test/resources/global.properties
@@ -106,7 +106,7 @@ Individual_Quese_Approval_OutCome_Revision_Select_XPATH=//*[@title='Revision']
 #Scenario  3-----Individual Taxpayer Reject
 
 Individual_NextStage_RefNum_Reject_OutComeNotes_ID=tbg_outcomenotes_i
-OutComeReason_Frame_XPATH=//*[@id="WebResource_tbg_rejectionRefernceData"]
+OutComeReason_Frame_ID=WebResource_AuditRejectionDataReferenceResource
 OutComeReason_Accounting_Frame_XPATH=//*[@id="WebResource_RevenueCollectionRejectionDataWebResource"]
 Individual_Outcome_ID=header_process_tbg_approvaloutcome1_cl
 
