--- a/src/test/resources/global.properties
+++ b/src/test/resources/global.properties
@@ -140,3 +140,8 @@ IND_Register_TaxType_Approval_ID=header_process_tbg_approvaloutcome4
 Audit_Button=//*[text()="Audit"]
 Create_Case_Manually=//*[text()="Create Case Manually"] 
 Precessing_Completed_RefferenceNumber_ID=welcomeForm:msg
+
+Reporting_Link_Xapth=//*[@id="MenuForm:j_idt29"]/ul/li[4]/a
+Reporting_Reports_Link_Xapth=//*[@id="MenuForm:j_idt29"]/ul/li[4]/ul/li[1]/a/span
+Reporting_Reports_RefundClaimsPaidReport_RunReport_button_ID=frmReportDetails:RunReport
+Reporting_Reports_RefundClaimsPaidReport_CancelReport_button_ID=frmReportDetails:btnCancel
